--- a/conf/model/sequence_modelling_cosformer_8x4096.yaml
+++ b/conf/model/sequence_modelling_cosformer_8x4096.yaml
@@ -1,8 +1,8 @@
 defaults:
-  - mha: cosformer
+  - mha: vanilla
   - hourglass: default
 
 type: sequence_modelling
 structure: 8x4096
-pos_enc_type: linear
+pos_enc_type: learnable
 use_embedding: true
