--- a/conf/model/sequence_modelling_cosformer_6x4096.yaml
+++ b/conf/model/sequence_modelling_cosformer_6x4096.yaml
@@ -1,9 +1,9 @@
 defaults:
-  - mha: vanilla
+  - mha: cosformer
   - hourglass: default
 
 type: sequence_modelling
-structure: 2x50,4x25,2x50
-pos_enc_type: none
+structure: 6x4096
+pos_enc_type: learnable
 use_embedding: true
 num_classes: null
