--- a/conf/model/sequence_modelling_vanilla_1x128,4x64,1x128.yaml
+++ b/conf/model/sequence_modelling_vanilla_1x128,4x64,1x128.yaml
@@ -1,9 +1,9 @@
 defaults:
-  - mha: cosformer
+  - mha: vanilla
   - hourglass: default
 
 type: sequence_modelling
-structure: 2x512,4x256,2x512
+structure: 1x128,4x64,1x128
 pos_enc_type: none
 use_embedding: true
 num_classes: null
