--- a/conf/model/sequence_modelling_cosformer_1x4096,4x2048,1x4096 copy.yaml
+++ b/conf/model/sequence_modelling_cosformer_1x4096,4x2048,1x4096 copy.yaml
@@ -3,7 +3,7 @@ defaults:
   - hourglass: default
 
 type: sequence_modelling
-structure: 8x50
-pos_enc_type: none
+structure: 1x4096,4x2048,1x4096
+pos_enc_type: learnable
 use_embedding: true
 num_classes: null
